force-app/main/default/objects/WebshopProductLink__c/WebshopProductLink__c.object-meta.xml
<CustomObject>
    <description>Product Links for the LWR webshop.</description>
    <label>Webshop Product Link</label>
    <nameField>
        <displayFormat>LINK-{0000000}</displayFormat>
        <label>Webshop Product Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webshop Product Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>