force-app/main/default/objects/WebshopProductLink__c/fields/Product1__c.field-meta.xml
<CustomField>
    <fullName>Product1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>WebshopProductLinksOne</relationshipLabel>
    <relationshipName>WebshopProductLinksOne</relationshipName>
    <type>Lookup</type>
</CustomField>