force-app/main/default/objects/WebshopProductLink__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>